# cpp-advent-of-code

./: .gitignore  CMakeLists.txt  README.md
configuration/: root_directory.h.in
include/: filesystem.h  root_directory.h
src/2022/1.question/: q1.cpp
src/2022/day1/: input.txt  q1.cpp
src/2022/day2/: q2.cpp
src/2022/day3/: input.txt  q3.cpp
src/2022/day4/: q4.cpp
src/2023/day1/: q1.cpp
